--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/wanteddev/wanted-sans@v1.0.1/packages/wanted-sans/fonts/webfonts/static/split/WantedSans.min.css");
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -9,30 +11,24 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -47,24 +43,20 @@
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -77,6 +69,18 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Wanted Sans", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-use-select: none;
+  user-select: none;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 html,
@@ -87,12 +91,9 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 a {
@@ -104,4 +105,136 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+main {
+  padding: 1rem 0.8rem;
+}
+
+.station-item {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 15px;
+  transition: all 0.2s ease-in-out;
+}
+
+.station-item:active {
+  background-color: #1f1f1f;
+  transform: scale(0.98);
+}
+
+.player-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5em;
+  height: 60px;
+}
+
+.player-header-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  width: 100%;
+}
+
+.player-header-close {
+  cursor: pointer;
+  color: rgb(var(--foreground-rgb));
+}
+
+.player-body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: end;
+  padding: 2rem;
+  height: 90%;
+}
+
+.player-body-title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-left: 5px;
+  margin-bottom: 10px;
+}
+
+.player-playpause-btn {
+  cursor: pointer;
+  font-size: 3rem;
+  transition: all 0.2s ease-in-out;
+  color: #4cffba;
+}
+
+.player-playpause-btn:active {
+  transform: scale(0.9);
+}
+
+.bottom-nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 60px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  background-color: #1f1f1f;
+  box-sizing: border-box;
+  font-size: 1.5rem;
+}
+
+.bottom-nav .item {
+  transition: all 0.2s ease-in-out;
+}
+
+.bottom-nav .item:active {
+  transform: scale(0.9);
+}
+
+.bottom-nav .item.active {
+  color: #4cffba;
+}
+
+header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #000;
+}
+
+.region-select {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  box-sizing: border-box;
+  font-size: 1.5rem;
+  overflow-x: scroll;
+  white-space: nowrap;
+  margin: 0 0.8rem;
+  gap: 5px;
+}
+
+.region-select button {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  color: rgb(var(--foreground-rgb));
+  font-size: 1.2rem;
+  font-weight: 300;
+  transition: all 0.2s ease-in-out;
+  width: max-content;
+  opacity: 0.5;
+}
+
+.region-select button.active {
+  border-bottom: 2px solid #4cffba;
+  opacity: 1;
 }
