--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,66 +3,68 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 
-  --primary-glow: conic-gradient(from 180deg at 50% 50%,
-      #16abff33 0deg,
-      #0885ff33 55deg,
-      #54d6ff33 120deg,
-      #0071ff33 160deg,
-      transparent 360deg);
-  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
-      rgba(255, 255, 255, 0));
+  --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+  --secondary-glow: linear-gradient(to bottom right,
+      rgba(1, 65, 255, 0),
+      rgba(1, 65, 255, 0),
+      rgba(1, 65, 255, 0.3));
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(#00000080,
-      #00000040,
-      #00000030,
-      #00000020,
-      #00000010,
-      #00000010,
-      #00000080);
+  --tile-start-rgb: 2, 13, 46;
+  --tile-end-rgb: 2, 5, 19;
+  --tile-border: conic-gradient(#ffffff80,
+      #ffffff40,
+      #ffffff30,
+      #ffffff20,
+      #ffffff10,
+      #ffffff10,
+      #ffffff80);
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(to bottom right,
-        rgba(1, 65, 255, 0),
-        rgba(1, 65, 255, 0),
-        rgba(1, 65, 255, 0.3));
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(#ffffff80,
-        #ffffff40,
-        #ffffff30,
-        #ffffff20,
-        #ffffff10,
-        #ffffff10,
-        #ffffff80);
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --callout-rgb: 20, 20, 20;
+  --callout-border-rgb: 108, 108, 108;
+  --card-rgb: 100, 100, 100;
+  --card-border-rgb: 200, 200, 200;
+  --md-sys-color-background: #101412;
+  --md-sys-color-on-background: #e0e3df;
+  --md-sys-color-surface: #101412;
+  --md-sys-color-surface-dim: #101412;
+  --md-sys-color-surface-bright: #363a37;
+  --md-sys-color-surface-container-lowest: #0b0f0d;
+  --md-sys-color-surface-container-low: #181c1a;
+  --md-sys-color-surface-container: #1c201e;
+  --md-sys-color-surface-container-high: #272b28;
+  --md-sys-color-surface-container-highest: #323633;
+  --md-sys-color-on-surface: #e0e3df;
+  --md-sys-color-surface-variant: #3f4943;
+  --md-sys-color-on-surface-variant: #bfc9c1;
+  --md-sys-color-inverse-surface: #e0e3df;
+  --md-sys-color-inverse-on-surface: #2d312e;
+  --md-sys-color-outline: #89938c;
+  --md-sys-color-outline-variant: #3f4943;
+  --md-sys-color-shadow: #000000;
+  --md-sys-color-scrim: #000000;
+  --md-sys-color-surface-tint: #8cd6b0;
+  --md-sys-color-primary: #8cd6b0;
+  --md-sys-color-on-primary: #003825;
+  --md-sys-color-primary-container: #004e34;
+  --md-sys-color-on-primary-container: #a0eac4;
+  --md-sys-color-inverse-primary: #1e6b4c;
+  --md-sys-color-secondary: #b0cdbb;
+  --md-sys-color-on-secondary: #1c3529;
+  --md-sys-color-secondary-container: #2b4537;
+  --md-sys-color-on-secondary-container: #bddbc9;
+  --md-sys-color-tertiary: #c5c0ff;
+  --md-sys-color-on-tertiary: #2d2961;
+  --md-sys-color-tertiary-container: #403c75;
+  --md-sys-color-on-tertiary-container: #dad6ff;
+  --md-sys-color-error: #ffb4ab;
+  --md-sys-color-on-error: #690005;
+  --md-sys-color-error-container: #93000a;
+  --md-sys-color-on-error-container: #ffdad6;
 }
 
 * {
@@ -89,6 +91,11 @@ body {
   overflow-x: hidden;
 }
 
+svg {
+  position: relative;
+  top: 3px;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
@@ -109,17 +116,19 @@ a {
 
 main {
   padding: 1rem 0.8rem;
+  padding-bottom: 150px;
 }
 
 .station-item {
   display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
   padding: 1rem;
   border-radius: 15px;
   transition: all 0.2s ease-in-out;
+
 }
 
 .station-item:active {
@@ -222,7 +231,8 @@ header {
   gap: 5px;
 }
 
-.region-select button {
+.region-select button,
+.station-item button {
   cursor: pointer;
   background-color: transparent;
   border: none;
@@ -232,6 +242,12 @@ header {
   transition: all 0.2s ease-in-out;
   width: max-content;
   opacity: 0.5;
+}
+
+.station-item button {
+  width: 30px;
+  height: 30px;
+  z-index: -1;
 }
 
 .region-select button.active {
