--- a/styles/globals.css
+++ b/styles/globals.css
@@ -147,6 +147,23 @@ main {
   transform: scale(0.98);
 }
 
+.station-item.active {
+  color: #4cffba;
+}
+
+.badge {
+  width: fit-content;
+  height: 30px;
+  border-radius: 20px;
+  padding: 2px 5px;
+  font-size: .8em;
+  background-color: #4cffba;
+  color: #000;
+  position: relative;
+  top: -1px;
+  z-index: -1;
+}
+
 .player-header {
   display: flex;
   justify-content: space-between;
@@ -185,6 +202,25 @@ main {
   cursor: pointer;
   font-size: 22px;
   color: rgb(var(--foreground-rgb));
+}
+
+.loader {
+  width: 25px;
+  height: 25px;
+  border: 4px solid #2b2b2b;
+  border-top: 4px solid #4cffba;
+  border-radius: 50%;
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .player-body {
