--- a/styles/globals.css
+++ b/styles/globals.css
@@ -298,6 +298,7 @@ main {
   background-color: #1f1f1f;
   box-sizing: border-box;
   font-size: 1.5rem;
+  border-radius: 15px 15px 0 0;
 }
 
 .bottom-nav .item {
