--- a/styles/globals.css
+++ b/styles/globals.css
@@ -130,6 +130,24 @@ main {
   padding-bottom: 150px;
 }
 
+button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1rem;
+  background-color: #1f1f1f;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  transition: all 0.2s ease-in-out;
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
 .station-item {
   display: flex;
   flex-direction: row;
