--- a/styles/globals.css
+++ b/styles/globals.css
@@ -244,7 +244,7 @@ main {
 .player-body {
   padding: 2rem;
   position: fixed;
-  bottom: 0;
+  bottom: 60px;
   z-index: 999;
   overflow: hidden;
   width: 100%;
