--- a/styles/globals.css
+++ b/styles/globals.css
@@ -450,3 +450,85 @@ header {
     transform: rotate(360deg) translateZ(0)
   }
 }
+
+.timer-modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #00000080;
+  backdrop-filter: blur(10px);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.timer-modal {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #1f1f1f;
+  border-radius: 20px 20px 0 0;
+  padding: 1rem;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  z-index: 10000;
+  padding: 20px;
+}
+
+.timer-modal button {
+  width: 100%;
+  padding: 1rem;
+  border-radius: 15px;
+  background-color: #ffffff2f;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: all 0.2s ease-in-out;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  font-weight: 500;
+}
+
+.timer-modal button:active {
+  transform: scale(0.95);
+}
+
+.timer-modal button.primary {
+  background-color: #4cffbae1;
+  color: #000000;
+}
+
+.select-container {
+  position: relative;
+}
+
+select {
+  width: 50px;
+  font-size: 2rem;
+  border: none;
+  background-color: transparent;
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+}
+
+.select-container select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: none;
+}
+
+select option {
+  background-color: #1f1f1f;
+  color: #fff;
+  font-size: 1rem;
+}
