--- a/styles/globals.css
+++ b/styles/globals.css
@@ -339,7 +339,9 @@ header {
   top: 0;
   left: 0;
   padding: 1rem;
+  padding-bottom: 0;
   background-color: #000;
+  z-index: 99;
 }
 
 .region-select {
