--- a/styles/globals.css
+++ b/styles/globals.css
@@ -149,7 +149,7 @@ main {
   padding: 1rem;
   border-radius: 15px;
   transition: all 0.2s ease-in-out;
-
+  z-index: 0;
 }
 
 .station-item:active {
@@ -341,7 +341,18 @@ header {
   padding: 1rem;
   padding-bottom: 0;
   background-color: #000;
-  z-index: 99;
+}
+
+.kakao_ad_area {
+  border-radius: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  box-sizing: border-box;
+  max-width: calc(100dvw - 50px);
+}
+
+.kakao_ad_area iframe {
+  border-radius: 10px;
 }
 
 .region-select {
