--- a/styles/globals.css
+++ b/styles/globals.css
@@ -236,6 +236,7 @@ main {
 .player-header-title.open {
   margin-top: 25px;
   text-align: center;
+  padding-left: 1.5em;
 }
 
 .player-header-close {
